tests/typing/fail/type-mismatch-04.stderr
error: type mismatch: `bool` and `int`
 --> tests/typing/fail/type-mismatch-04.rs:8:19
  |
8 |         a : int = false -> 3;
  |                   ^^^^^^^^^^
